--- a/LexiconLMS/Client/Shared/NavMenu.razor
+++ b/LexiconLMS/Client/Shared/NavMenu.razor
@@ -24,8 +24,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="activitieslist">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> activites
+            </NavLink>
+        </div>
     </nav>
 </div>
+
+
 
 @code {
     private bool collapseNavMenu = true;
