--- a/LexiconLMS/Client/Pages/CourseAdd.razor
+++ b/LexiconLMS/Client/Pages/CourseAdd.razor
@@ -1,4 +1,4 @@
-﻿<h3>Add Course</h3>
+﻿@* <h3>Add Course</h3>
 
 <section class="course-edit">
 
@@ -40,4 +40,4 @@
         <a href="@($"listofcourses")" class="btn btn-outline-primary">Back to Course list</a>&nbsp;
         <button type="submit" class="btn btn-primary me-1">Add Course</button>
     </EditForm>
-</section>
+</section> *@
