Included features to pages and imports razor additions

--- a/LexiconLMS/Client/Components/ActivityList.razor
+++ b/LexiconLMS/Client/Components/ActivityList.razor
@@ -1,11 +1,9 @@
 ﻿
-
-
-<AuthorizeView Roles="Teacher">
+@* <AuthorizeView Roles="Teacher">
     <Authorized>
         <a href="@($"activityadd")" class="btn btn-outline-primary">Add new Activity</a>
     </Authorized>
-</AuthorizeView>
+</AuthorizeView> *@
 
 <table class="table">
     <thead>
