--- a/LexiconLMS/Client/Pages/ActivityUpdate.razor
+++ b/LexiconLMS/Client/Pages/ActivityUpdate.razor
@@ -1,5 +1,74 @@
-﻿<h3>ActivityUpdate</h3>
+﻿@page "/activityupdate/{ActivityId:guid}"
+@using LexiconLMS.Shared.Entities
 
-@code {
+<section class="card p-3">
 
-}
+	@if (!string.IsNullOrEmpty(ErrorMessage))
+	{
+		<p class="alert alert-danger">@ErrorMessage</p>
+	}
+	else if (!string.IsNullOrEmpty(Message))
+	{
+		<p class="alert alert-success">@Message</p>
+	}
+
+	<h3>Update Module</h3>
+
+	<EditForm Model="@Activity" OnValidSubmit="@HandleValidSubmit">
+
+		<DataAnnotationsValidator></DataAnnotationsValidator>
+		<div class="d-lg-table col-lg-8">
+			<div class="row d-lg-table-row mb-3 mb-lg-0">
+				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
+					<label for="name" class="col-form-labelo">Name: </label>
+				</div>
+				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
+					<InputText id="name" class="form-control" @bind-Value="@Activity.Name" placeholder="Name"></InputText>
+					<ValidationMessage class="offset-md-3" For="@(() => Activity.Name)" />
+				</div>
+			</div>
+
+			<div class="row d-lg-table-row mb-3 mb-lg-0">
+				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
+					<label for="description" class="col-form-labelo">Description: </label>
+				</div>
+				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
+					<InputText id="description" class="form-control" @bind-Value="@Activity.Description" placeholder="Description"></InputText>
+					<ValidationMessage class="offset-md-3" For="@(() => Activity.Description)" />
+				</div>
+			</div>
+
+			<div class="row d-lg-table-row mb-3 mb-lg-0">
+				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
+					<label for="start-date" class="col-form-label">Start date: </label>
+				</div>
+				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
+					<InputDate id="start-date" class="form-control" @bind-Value="@Activity.StartDate" placeholder="Start date"></InputDate>
+				</div>
+			</div>
+
+			<div class="row d-lg-table-row mb-3 mb-lg-0">
+				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
+					<label for="end-date" class="col-form-label">End date: </label>
+				</div>
+				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
+					<InputDate id="end-date" class="form-control" @bind-Value="@Activity.EndDate" placeholder="End date"></InputDate>
+				</div>
+
+				
+			</div>
+		</div>
+
+
+		<button type="submit" class="btn btn-success me-1">Save module</button>
+
+		<button type="button" class="btn btn-danger my-1" @onclick="@DeleteActivity">
+			Delete
+		</button>
+
+		@* <button type="button" class="btn btn-outline-primary ms-1" @onclick="@(()=> {navigationManager.NavigateTo("/");})">Back</button> *@
+
+	</EditForm>
+
+
+</section>
