--- a/LexiconLMS/Client/Pages/CourseDetails.razor
+++ b/LexiconLMS/Client/Pages/CourseDetails.razor
@@ -1,22 +1,27 @@
-﻿@page "/course/{guid}"
+﻿@page "/course/{Guid}"
 @using LexiconLMS.Shared.Entities
 @using Microsoft.EntityFrameworkCore
 @using LexiconLMS.Client.Services
+@using LexiconLMS.Client.Helpers
 @inject GenericDataService DataService
 
 <h3>Course Details</h3>
 
-@* <ModulesList Modules=""/> *@
+<ActivitiesSchedule/>
+<ModulesList List="Modules"/>
+<StudentList/>
 
 @code {
     [Parameter]
     public Guid Guid { get; set; }
 
     public Course Course { get; set; }
+    public List<Module> Modules { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        Course = await DataService.GetAsync<Course>($"api/course/{Guid}");
+        Course = await DataService.GetAsync<Course>(UriHelper.GetCourseUri(Guid));
+        Modules = await DataService.GetAsync<List<Module>>(UriHelper.GetModulesUri(Guid));
     }
 
     
