--- a/LexiconLMS/Client/Pages/CourseAdd.razor
+++ b/LexiconLMS/Client/Pages/CourseAdd.razor
@@ -1,4 +1,10 @@
-﻿<h3>Add Course</h3>
+﻿@page "/courseadd"
+
+@using Microsoft.AspNetCore.Authorization
+
+@* @attribute [Authorize(Roles = "Teacher")] *@
+
+<h3>Add Course</h3>
 
 <section class="course-edit">
 
