--- a/LexiconLMS/Client/Shared/NavMenu.razor
+++ b/LexiconLMS/Client/Shared/NavMenu.razor
@@ -24,6 +24,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Activities
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="listofcourses">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Courses
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
