--- a/LexiconLMS/Client/Components/StudentList.razor
+++ b/LexiconLMS/Client/Components/StudentList.razor
@@ -1,5 +1,46 @@
-﻿<h3>StudentList</h3>
+﻿@using LexiconLMS.Shared.Entities
 
-@code {
-    // TODO
+@if (StudentLst == null || StudentLst.Count == 0)
+{
+    <p><em>No Students</em></p>
+}
+else
+{
+    <a href="@($"/useradd/{Course.Id}")" class="btn btn-outline-primary">Add new User</a>
+
+    <AuthorizeView Roles="Teacher">
+        <Authorized>
+            <a href="@($"/useradd/{Course.Id}")" class="btn btn-outline-primary">Add new User</a>
+        </Authorized>
+    </AuthorizeView>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Email</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var student in StudentLst)
+            {
+                <tr>
+                    <td scope="row">@student.FirstName</td>
+                    <td scope="row">@student.LastName</td>
+                    <td scope="row">@student.Email</td>
+                    <td scope="row">
+                        <a href="@($"studentdetails/{student.Id}")" class="btn btn-outline-primary">Details</a>
+                        <AuthorizeView Roles="Teacher">
+                            <Authorized>
+                                <a href="@($"studentupdate/{student.Id}")" class="btn btn-outline-primary">Update</a>
+                                <a href="@($"studentdelete/{student.Id}")" class="btn btn-outline-primary">Delete</a>
+                            </Authorized>
+                        </AuthorizeView>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
