--- a/LexiconLMS/Client/Pages/CourseDetails.razor
+++ b/LexiconLMS/Client/Pages/CourseDetails.razor
@@ -1,28 +1,12 @@
-﻿@page "/course/{Guid}"
+﻿@page "/course/{CourseId}"
 @using LexiconLMS.Shared.Entities
 @using Microsoft.EntityFrameworkCore
 @using LexiconLMS.Client.Services
 @using LexiconLMS.Client.Helpers
-@inject GenericDataService DataService
 
 <h3>Course Details</h3>
 
 <ActivitiesSchedule/>
 <ModulesList List="Modules"/>
-<StudentList/>
+<StudentList StudentLst="Students" Course="Course" />
 
-@code {
-    [Parameter]
-    public Guid Guid { get; set; }
-
-    public Course Course { get; set; }
-    public List<Module> Modules { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        Course = await DataService.GetAsync<Course>(UriHelper.GetCourseUri(Guid));
-        Modules = await DataService.GetAsync<List<Module>>(UriHelper.GetModuleUri(Guid));
-    }
-
-    
-}
