--- a/LexiconLMS/Client/Pages/ActivityUpdate.razor
+++ b/LexiconLMS/Client/Pages/ActivityUpdate.razor
@@ -60,7 +60,7 @@
 		</div>
 
 
-		<button type="submit" class="btn btn-success me-1">Save module</button>
+		<button type="submit" class="btn btn-success me-1">Update Activity</button>
 
 		<button type="button" class="btn btn-danger my-1" @onclick="@DeleteActivity">
 			Delete
