--- a/LexiconLMS/Client/Pages/ActivityAdd.razor
+++ b/LexiconLMS/Client/Pages/ActivityAdd.razor
@@ -8,7 +8,7 @@
 		<p class="alert alert-danger">@ErrorMessage</p>
 	}
 
-	<h3>Add Module</h3>
+	<h3>Add Activity</h3>
 
 	<EditForm Model="@Activity" OnValidSubmit="@HandleValidSubmit">
 
@@ -21,6 +21,16 @@
 				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
 					<InputText id="name" class="form-control" @bind-Value="@Activity.Name" placeholder="Name"></InputText>
 					<ValidationMessage class="offset-md-3" For="@(() => Activity.Name)" />
+				</div>
+			</div>
+
+			<div class="row d-lg-table-row mb-3 mb-lg-0">
+				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
+					<label for="name" class="col-form-labelo">Activity Type: </label>
+				</div>
+				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
+					<InputText id="name" class="form-control" @bind-Value="@Activity.Type.Name" placeholder="Name"></InputText>
+					<ValidationMessage class="offset-md-3" For="@(() => Activity.Type.Name)" />
 				</div>
 			</div>
 
@@ -56,13 +66,6 @@
 		</div>
 
 		<button type="submit" class="btn btn-success me-1">Save Activity</button>
-
-	@* 	@if (Module.Id != default)
-		{
-			<button type="button" class="btn btn-danger my-1" @onclick="@DeleteModule">
-				Delete
-			</button>
-		} *@
 
 		<button type="button" class="btn btn-outline-primary ms-1" @onclick="@(()=> {NavigationManager.NavigateTo("/");})">Back</button>
 
