--- a/LexiconLMS/Client/Components/ActivityList.razor
+++ b/LexiconLMS/Client/Components/ActivityList.razor
@@ -5,36 +5,44 @@
     </Authorized>
 </AuthorizeView> *@
 
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Activity Id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Start Date</th>
-            <th scope="col">End Date</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var activity in ActivityLst)
-        {
+<div class="table-responsive"> 
+    <table class="table">
+        <thead>
             <tr>
-                <td scope="row">@activity.Id</td>
-                <td scope="row">@activity.Name</td>
-                <td scope="row">@activity.StartDate</td>
-                <td scope="row">@activity.EndDate</td>
-                <td scope="row">
-                    <a href="@($"activityDetails/{activity.Id}")" class="btn btn-outline-primary">Details</a>
-                    <AuthorizeView Roles="Teacher">
-                        <Authorized>
-                            <a href="@($"activityUpdate/{activity.Id}")" class="btn btn-outline-primary">Update</a>
-                            <a href="@($"activityDelete/{activity.Id}")" class="btn btn-outline-primary">Delete</a>
-                        </Authorized>
-                    </AuthorizeView>
-                </td>
+                <th scope="col">Name</th>
+                <th scope="col">Type</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">End Date</th>
+                <th scope="col"></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @if (ActivityLst != null)
+            {
+                @foreach (var activity in ActivityLst)
+                {
+                    <tr>
+                        <td scope="row">@activity.Name</td>
+                        <td scope="row">@activity.Type.Name</td>
+                        <td scope="row">@activity.StartDate</td>
+                        <td scope="row">@activity.EndDate</td>
+                        <td scope="row">
+                            <div class="d-flex">
+                                <a href="@($"activityDetails/{activity.Id}")" class="btn"><span class="text-dark oi oi-external-link"></span></a>
+                                <AuthorizeView Roles="Teacher">
+                                    <Authorized>
+                                        <a href="@($"activityUpdate/{activity.Id}")" class="btn"><span class="text-dark oi oi-pencil"></span></a>
+                                        <a href="@($"activityDelete/{activity.Id}")" class="btn"><span class="text-dark oi oi-circle-x"></span></a>
+                                    </Authorized>
+                                </AuthorizeView>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+</div>
+
 
 
