--- a/LexiconLMS/Client/Pages/ModuleAdd.razor
+++ b/LexiconLMS/Client/Pages/ModuleAdd.razor
@@ -1,4 +1,5 @@
-﻿@page "/moduleadd/{courseId:guid}"
+﻿@attribute [Route(UriHelper.ModuleAdd)]
+
 @using LexiconLMS.Shared.Entities
 
 <section class="card p-3 col-md-8 col-lg-6">
