--- a/LexiconLMS/Client/_Imports.razor
+++ b/LexiconLMS/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using LexiconLMS.Client.Shared
 @using LexiconLMS.Client.Components
 @using LexiconLMS.Client.Services
+@using LexiconLMS.Client.Helpers
