Changed design of Activity Details, Added List property ActivityDocument to Activity Model. Added Controllers to doucments and activitydocuments. Added a quickfix to view and download doucments from activities

--- a/LexiconLMS/Client/Pages/ActivitiesList.razor
+++ b/LexiconLMS/Client/Pages/ActivitiesList.razor
@@ -2,6 +2,11 @@
 @using LexiconLMS.Client.Components;
 <h3>List of Activities</h3>
 
+@* <AuthorizeView Roles="Teacher">
+    <Authorized> *@
+        <a href="@($"activityadd")" class="btn btn-outline-primary">Add new Activity</a>
+@*     </Authorized>
+</AuthorizeView> *@
 
 <table class="table">
     <thead>
