--- a/LexiconLMS/Client/Components/AssignmentsListTeachers.razor
+++ b/LexiconLMS/Client/Components/AssignmentsListTeachers.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using LexiconLMS.Shared.Entities;
+
 <div class="table-responsive">
     <table class="table">
         <thead>
@@ -17,7 +18,12 @@
                     <tr>
                         <td scope="row">@activity.StudentName</td>
                         <td scope="row">@activity.AssignmentName</td>
-                        <td scope="row">@activity.Submitted</td>
+                        <td scope="row">
+                            <div class="@GetStatusCSSClass(activity.SubmissionState) text-center text-lowercase">
+                                @activity.SubmissionState.AsText()
+                            </div>
+                        </td>
+                        <td scope="row">@activity.DueDate</td>
                     </tr>
                 }
             }
