--- a/LexiconLMS/Client/Pages/CourseDetails.razor
+++ b/LexiconLMS/Client/Pages/CourseDetails.razor
@@ -12,3 +12,23 @@
 <ModulesList List="Modules"/>
 <StudentList StudentLst="Students" Course="Course" />
 
+@* <DocumentList List="CourseDocuments"></DocumentList> *@
+
+@if (Course.CourseDocument != null && Course.CourseDocument.Any())
+{
+	<p>Documents:</p>
+	<ul>
+		@foreach (var item in Course.CourseDocument)
+		{
+			<li>
+				@item.Name
+				<button @onclick="() => DownloadDocument(item)">Download</button>
+			</li>
+		}
+	</ul>
+}
+else
+{
+	<p>No documents available for this activity.</p>
+}
+
