Revert "Changed design of Activity Details, Added List property ActivityDocument to Activity Model. Added Controllers to doucments and activitydocuments. Added a quickfix to view and download doucments from activities"
This reverts commit e01dcf3618fa82e7c5843a7535ce326155685846.

--- a/LexiconLMS/Client/Pages/CourseDetails.razor
+++ b/LexiconLMS/Client/Pages/CourseDetails.razor
@@ -8,7 +8,10 @@
 <h3>Course Details</h3>
 
 <ActivitiesSchedule/>
-
+<AuthorizeView Roles="Teacher">
+    <Authorized>
 <ModulesList List="Modules"/>
+    </Authorized>
+</AuthorizeView>
 <StudentList StudentLst="Students" Course="Course" />
 
