--- a/LexiconLMS/Client/Components/ActivityList.razor
+++ b/LexiconLMS/Client/Components/ActivityList.razor
@@ -1,5 +1,9 @@
 ﻿
-
+@* <AuthorizeView Roles="Teacher">
+    <Authorized>
+        <a href="@($"activityadd")" class="btn btn-outline-primary">Add new Activity</a>
+    </Authorized>
+</AuthorizeView> *@
 
 <div class="table-responsive"> 
     <table class="table">
