--- a/LexiconLMS/Client/Pages/ActivityDetails.razor
+++ b/LexiconLMS/Client/Pages/ActivityDetails.razor
@@ -1,41 +1,76 @@
 ﻿@attribute [Route(UriHelper.ActivityDetails)]
+<div class="d-flex justify-content-between flex-wrap">
+	@if (string.IsNullOrEmpty(Activity.Name))
+	{
+		<h3>Activity details</h3>
+	}
+	else
+	{
+		<div>
+			<h3>Activity: @Activity.Name</h3>
+			<p class="fs-6 text-muted">@Activity.StartDate. − @Activity.EndDate</p>
+		</div>
+	}
+
+	@if (!string.IsNullOrEmpty(ErrorMessage))
+	{
+		<p class="alert alert-danger">@ErrorMessage</p>
+	}
+	else if (!string.IsNullOrEmpty(Message))
+	{
+		<p class="alert alert-success">@Message</p>
+	}
+@* 	 <AuthorizeView Roles="Teacher">
+          <Authorized> *@
+	<div class="mb-3">
+		<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activitydocumentupload/{Activity.Id}");})">Upload Document</button>
+		<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activityUpdate/{Activity.Id}");})">Update Activty</button>
+		<button class="btn btn-danger" @onclick="@(() => DeleteActivity())">Delete Activity</button>
+	</div>
+@* 		</Authorized>
+	</AuthorizeView> *@
+
+</div>
 
 
-<h3>Activity Details</h3>
+<div class="card bg-light mb-3 shadow-sm">
+	<div class="card-body">
+		<div class="card-title fw-bold">Activity Description</div>
+		@Activity.Description
+	</div>
+</div>
 
-@if (!string.IsNullOrEmpty(ErrorMessage))
-{
-    <div class="alert alert-danger" role="alert">
-        @ErrorMessage
-    </div>
-}
+<div class="row">
+	<div class="col-lg-6 mb-3">
+		<div class="card bg-light shadow">
+			<div class="card-header bg-light fw-bold">Activity Details:</div>
+			<div class="card-body">
+				<span style="font-weight: bold;">Module:</span> @Module.Name <br />
+				<span style="font-weight: bold;">Activity Type:</span> @Activity.Type.Name <br />
+				<span style="font-weight: bold;">Start:</span> @Module.StartDate <br />
+				<span style="font-weight: bold;">End:</span> @Module.EndDate <br />
+				  <br />
+				
+				
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6 mb-3">
+		<div class="card bg-light shadow">
+			<div class="card-header bg-light fw-bold">Documents:</div>
+			<div class="card-body">
+				<DocumentList List="ActivityDocuments"></DocumentList>
+			</div>
+		</div>
+	</div>
+</div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Activity Name</th>
-            <th scope="col">Activity Type</th>
-            <th scope="col">Module</th>
-            <th scope="col">Starttime</th>
-            <th scope="col">Endtime</th>
-            <th scope="col">Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td scope="row">@Activity.Name</td>
-            <td scope="row">@Activity.Type.Name</td>
-            <td scope="row">@Module.Name</td>
-            <td scope="row">@Activity.StartDate</td>
-            <td scope="row">@Activity.EndDate</td>
-            <td scope="row">@Activity.Description</td>
-        </tr>
-    </tbody>
-</table>
-<button type="button" class="btn btn-danger my-1" @onclick="@DeleteActivity">
-    Delete
-</button>
-<a href="@($"activityUpdate/{Activity.Id}")" class="btn btn-outline-primary">Update</a>
-<a href="@($"activitieslist")" class="btn btn-outline-primary">Back to Activity list</a>
-
-
+@* <div class="row flex-row-reverse">
+	<div class="col-lg-6 mb-3">
+		<div class="card bg-light shadow">
+			<div class="card-header bg-light fw-bold">Students:</div>
+			<div class="card-body">
+			</div>
+		</div>
+	</div>
+</div> *@
