Added add, update and delete assignemnts. Deleted codebehind of ActivityList.

--- a/LexiconLMS/Client/Components/ActivityList.razor
+++ b/LexiconLMS/Client/Components/ActivityList.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using LexiconLMS.Shared.Entities
+
 
 
 <table class="table">
@@ -37,6 +38,11 @@
         }
     </tbody>
 </table>
+
+@code{
+    [Parameter]
+    public IEnumerable<Activity>? ActivityLst { get; set; } = null;
+}
 
 
 
