--- a/LexiconLMS/Client/Components/AssignmentsListTeachers.razor
+++ b/LexiconLMS/Client/Components/AssignmentsListTeachers.razor
@@ -6,6 +6,7 @@
             <th scope="col">Student</th>
             <th scope="col">Assigment</th>
             <th scope="col">Submitted</th>
+            <th scope="col">Due Date</th>
             <th scope="col"></th>
         </tr>
     </thead>
@@ -16,13 +17,23 @@
             {
                 <tr>
                     <td scope="row">@activity.StudentName</td>
-                    <td scope="row">@activity.AssignmentName</td>
+                    <td scope="row"><a class="hidden-link" href="@UriHelper.GetActivityDetailsUri(activity.AssignmentId)">@activity.AssignmentName</a></td>
                     <td scope="row">
                         <div class="@GetStatusCSSClass(activity.SubmissionState) text-center text-lowercase">
                             @activity.SubmissionState.AsText()
                         </div>
                     </td>
                     <td scope="row">@activity.DueDate</td>
+                    <td scope="row">
+                        <div class="d-flex">
+                            <AuthorizeView Roles="Teacher">
+                                <Authorized>
+                                    <a href="@UriHelper.GetAssignmentUpdateUri(activity.AssignmentId)" class="btn"><span class="text-dark oi oi-pencil"></span></a>
+                                    <a href="@UriHelper.GetActivityDeleteUri(activity.AssignmentId)" class="btn"><span class="text-dark oi oi-circle-x"></span></a>
+                                </Authorized>
+                            </AuthorizeView>
+                        </div>
+                    </td>
                 </tr>
             }
         }
