Change some paths for assgiments in the API, minor correction in ActivityForm.

--- a/LexiconLMS/Client/Components/AssignmentsListStudents.razor
+++ b/LexiconLMS/Client/Components/AssignmentsListStudents.razor
@@ -5,9 +5,8 @@
     <thead>
         <tr>
             <th>Assigment</th>
-            <th>State</th>
+            <th>Status</th>
             <th>Deadline</th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
