--- a/LexiconLMS/Client/Pages/AssignmentDetails.razor
+++ b/LexiconLMS/Client/Pages/AssignmentDetails.razor
@@ -1,4 +1,5 @@
 ﻿@using LexiconLMS.Client.Extensions
+@using LexiconLMS.Shared.Dtos
 @using LexiconLMS.Shared.Entities
 @attribute [Route(UriHelper.AssignmentDetails)]
 <div class="d-flex justify-content-between flex-wrap">
@@ -22,14 +23,12 @@
 	{
 		<p class="alert alert-success">@Message</p>
 	}
-@* 	 <AuthorizeView Roles="Teacher">
-          <Authorized> *@
-	<div class="mb-3">
-		<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activityUpdate/{Assignment.Id}");})">Update Activty</button>
-		<button class="btn btn-danger" @onclick="@(() => DeleteActivity())">Delete Activity</button>
-	</div>
-@* 		</Authorized>
-	</AuthorizeView> *@
+	<AuthorizeView Roles="@StaticUserRoles.Teacher">
+		<div class="mb-3">
+			<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activityUpdate/{Assignment.Id}");})">Update Activty</button>
+			<button class="btn btn-danger" @onclick="@(() => DeleteActivity())">Delete Activity</button>
+		</div>
+	</AuthorizeView>
 
 </div>
 
@@ -58,34 +57,20 @@
 		<div class="card bg-light shadow">
 			<div class="card-header bg-light fw-bold">Documents:</div>
 			<div class="card-body">
-				@* @if (Assignment.Documents.Any())
-				{ *@
-					<DocumentList List="ActivityDocuments"></DocumentList>
-				@* } *@
+				<DocumentList List="ActivityDocuments"></DocumentList>
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-6 mb-3">
-		<div class="card bg-light shadow">
-			<div class="card-header bg-light">
-				<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activitydocumentupload/{Assignment.Id}");})">Submit assignment</button>
-			</div>
-			<div class="card-body">
-				@* @if (Assignment.Documents.Any())
-				{ *@
-				<DocumentList List="Assignment.Documents"></DocumentList>
-				@* } *@
+	<AuthorizeView Roles="@StaticUserRoles.Student">
+		<div class="col-lg-6 mb-3">
+			<div class="card bg-light shadow">
+				<div class="card-header bg-light">
+					<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activitydocumentupload/{Assignment.Id}");})">Submit assignment</button>
+				</div>
+				<div class="card-body">
+					<DocumentList List="Assignment.Documents"></DocumentList>
+				</div>
 			</div>
 		</div>
-	</div>
+	</AuthorizeView>
 </div>
-
-@* <div class="row flex-row-reverse">
-	<div class="col-lg-6 mb-3">
-		<div class="card bg-light shadow">
-			<div class="card-header bg-light fw-bold">Students:</div>
-			<div class="card-body">
-			</div>
-		</div>
-	</div>
-</div> *@
