--- a/LexiconLMS/Client/Pages/AssignmentDetails.razor
+++ b/LexiconLMS/Client/Pages/AssignmentDetails.razor
@@ -25,6 +25,7 @@
 	}
 	<AuthorizeView Roles="@StaticUserRoles.Teacher">
 		<div class="mb-3">
+			<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activitydocumentupload/{Assignment.Id}");})">Upload Document</button>
 			<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activityUpdate/{Assignment.Id}");})">Update Activty</button>
 			<button class="btn btn-danger" @onclick="@(() => DeleteActivity())">Delete Activity</button>
 		</div>
