--- a/LexiconLMS/Client/Pages/CourseDetails.razor
+++ b/LexiconLMS/Client/Pages/CourseDetails.razor
@@ -1,4 +1,5 @@
 ﻿@attribute [Route(UriHelper.CourseDetails)]
+@attribute [Route(UriHelper.MyCourse)]
 @using LexiconLMS.Shared.Entities
 @using Microsoft.EntityFrameworkCore
 @using LexiconLMS.Client.Services
