--- a/LexiconLMS/Client/Shared/LoginDisplay.razor
+++ b/LexiconLMS/Client/Shared/LoginDisplay.razor
@@ -4,7 +4,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <a href="authentication/profile">Hello, @context.User.Identity?.Name!</a>
+        <a href="authentication/profile">Logged in as @context.User.Identity?.Name</a>
         <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
     </Authorized>
     <NotAuthorized>
