--- a/LexiconLMS/Client/Pages/Index.razor
+++ b/LexiconLMS/Client/Pages/Index.razor
@@ -2,7 +2,10 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to Lexicon Learning Management System!</h1>
 
-Welcome to your new app.
+<h3>To access your course and it's content, you will need to log in. If you do not have an account, please contact your teacher to get an account.</h3>
 
+<p>This is a comprehensive learning management system (LMS) designed specifically for Lexicon. Our platform offers a variety of courses, each structured into modules that contain numerous activities to enhance your learning experience.</p>
+
+<p>We hope you enjoy your learning journey with us!</p>
