--- a/LexiconLMS/Client/Pages/ModuleDetails.razor
+++ b/LexiconLMS/Client/Pages/ModuleDetails.razor
@@ -60,15 +60,18 @@
 	<div class="col-lg-6 mb-3">
 		<div class="card bg-light shadow">
 			<div class="card-header bg-light fw-bold">Assignments:</div>
-			<div class="card-body overflow-auto" style="max-height: 400px;">
+			<div class="card-body">
+				
 				@if (Module.CourseId != null)
 				{
 					<AuthorizeView Roles="@StaticUserRoles.Teacher">
 						<button class="btn btn-outline-primary py-1 mb-3" @onclick="@(() => {NavigationManager.NavigateTo(UriHelper.GetAssignmentAddUri(Module.Id));})">Add assignment</button>
-						<AssignmentsListTeachers CourseId="Module.CourseId" ModuleId="Module.Id"></AssignmentsListTeachers>
+						<AssignmentsListTeachers Assignments="AssignmentsForTeachers" ></AssignmentsListTeachers>
 					</AuthorizeView>
 					<AuthorizeView Roles="@StaticUserRoles.Student">
-						<AssignmentsListStudents ModuleId="Module.Id"></AssignmentsListStudents>
+						<div class="overflow-auto" style="max-height: 400px;">
+							<AssignmentsListStudents Assignments="AssignmentsForStudents"></AssignmentsListStudents>
+						</div>
 					</AuthorizeView>
 				}
 			</div>
